Revision history for Perl extension App::Info.

0.45
      - Added "key" attribute to handler requests.
      - Changed the handler key names for each subclass to more command-line
        friendly versions, such as "path-to-sqlite" instead of just "sqlite".

0.44  2005-01-08T00:29:03
      - Yet another fix for test failures on Win32, this time for PostgreSQL.
      - Fixed SQLite tests for DBD::SQLite (which is used to collect
        informationto when the SQLite executable can't be found) work
        properly.
      - Added workaround for strange bug on Perl 5.005_04 where handlers
        assigned to an App::Info object after its creation would be
        prompty forgotten. Reported by Yuval Kogman, who also gave me
        a login to a server with Perl 5.005_04 to fix the problem.

0.43  2004-12-14T19:45:52
      - Added "search_*_name" parameters and methods for searching for
        PostgreSQL and Apache executables other than the main one,
        which is already handed by "search_exe_names".
      - Fixed "apache.t", "iconv.t", "postgres.t", and "sqlite3.t" tests
        on Win32.

0.42  2004-12-07T00:40:53
      - Fixed last Win32 test failure in "apache.t".
      - Added "executable()" method to return the main executable of an app or
        library, if there is one.
      - Added other executable methods to App::Info::RDBMS::PostgreSQL,
        including "postgres()", "createdb()", "createuser()", and others.
      - Added other executable methods to App::Info::HTTPD::Apache,
        including "ab()", "apachectl()", "apxs()", and others.
      - Changed behavior of App::Info::HTTPD::Apache->bin_dir to just return
        the name of the directory in which the httpd executable is stored,
	rather than a possible "bin" directory under the httpd_root.

0.41  2004-11-28T20:01:57
      - Fixed Apache, SQLite, and Iconv tests to pass under Win32.
      - Fixed "bin_dir()" method for Apache module to return the same